--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {% if request.endpoint == 'reports' %}active{% endif %}" href="{{ url_for('view_reports') }}">
+                            <i class="fas fa-list me-1"></i>Reports
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'statistics' %}active{% endif %}" href="{{ url_for('statistics') }}">
                             <i class="fas fa-chart-line me-1"></i>Statistics
                         </a>
