--- a/templates/faq.html
+++ b/templates/faq.html
@@ -117,7 +117,7 @@
                         </div>
                     </div>
 
-                    <!-- Error Reporting -->
+<!--                     <!-- Error Reporting -->
                     <div>
                         <h3 class="mb-3">Error Reporting</h3>
                         
@@ -133,7 +133,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
